--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "mocha": "^8.0.1",
     "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "supertest": "^4.0.2"
   }
 }
