--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # MongoDB Atlas Configuration
 MONGODB_USERNAME=your_mongodb_username
 MONGODB_PASSWORD=your_mongodb_password
-MONGODB_CLUSTER=gallery.wc344.mongodb.net
+MONGODB_CLUSTER=moringaip1-copy.mongodb.net
 
 # Render Configuration
 RENDER_SERVICE_URL=https://your-app-name.onrender.com
