--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,16 @@ MONGODB_USERNAME=your_mongodb_username
 MONGODB_PASSWORD=your_mongodb_password
 MONGODB_CLUSTER=moringaip1-copy.mongodb.net
 
+# Application Configuration
+NODE_ENV=production
+PORT=10000
+
 # Render Configuration
 RENDER_SERVICE_URL=https://your-app-name.onrender.com
-PORT=10000
 
 # Email Configuration
 NOTIFICATION_EMAIL=your-email@example.com
 
 # Slack Configuration
 SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/SLACK/WEBHOOK
+SLACK_CHANNEL=#YourFirstName_IP1
